--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -1,12 +1,24 @@
--#  This file is app/views/movies/index.html.haml
+%h1.move_left_15_px All Movies
+
+= form_tag movies_path, :class => "move_left_15_px", :id => "ratings_form", :method => :get do 
+  Include:
+  - @all_ratings.each do |rating|
+    = rating
+    = check_box_tag "ratings[#{rating}]", :id => "ratings_#{rating}"
+  = submit_tag 'Refresh', :id => "ratings_submit"
+  
+- current_movies = {}
+- @movies.each do |movie|
+  - current_movies["#{movie.rating}"]="1"
+
 %h1 All Movies
 
 %table#movies
   %thead
     %tr
-      %th Movie Title
+      %th= link_to "Movie Title", :action => 'index', :sort_relation => :title, :ratings => current_movies, id: "title_header"
       %th Rating
-      %th Release Date
+      %th= link_to "Release Date", :action => 'index', :sort_relation => :release_date, :ratings => current_movies, id: "release_date_header"
       %th More Info
   %tbody
     - @movies.each do |movie|
@@ -15,5 +27,5 @@
         %td= movie.rating
         %td= movie.release_date
         %td= link_to "More about #{movie.title}", movie_path(movie)
-
+      
 = link_to 'Add new movie', new_movie_path
